--- a/demo/package.json
+++ b/demo/package.json
@@ -5,9 +5,13 @@
         "dev": "vite --port=5000",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "setup": "npx tailwindcss init -p"
+        "setup": "npx tailwindcss init -p",
+        "deploy": "npx netlify-cli deploy --prod"
     },
     "dependencies": {
+        "@headlessui/react": "^1.4.3",
+        "@themesberg/flowbite": "^1.3.0",
+        "daisyui": "^1.24.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
