--- a/demo/package.json
+++ b/demo/package.json
@@ -11,9 +11,12 @@
     "dependencies": {
         "@headlessui/react": "^1.4.3",
         "@themesberg/flowbite": "^1.3.0",
+        "@types/react-router-dom": "^5.3.3",
         "daisyui": "^1.24.3",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.1",
+        "tailwindcss": "^3.0.15"
     },
     "devDependencies": {
         "@types/react": "^17.0.33",
