--- a/demo/package.json
+++ b/demo/package.json
@@ -17,7 +17,8 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.0",
-        "tailwindcss": "^3.0.15"
+        "tailwindcss": "^3.0.15",
+        "yourid": "^0.1.3"
     },
     "devDependencies": {
         "@types/react": "^17.0.33",
