--- a/package.json
+++ b/package.json
@@ -1,37 +1,24 @@
 {
-    "name": "panel",
-    "version": "0.1.1",
-    "description": "⚙️ Noderrz Control Panel - Open source",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/noderrz/panel.git"
-    },
-    "keywords": [
-        "panel",
-        "node",
-        "js"
-    ],
-    "author": "Noderrz",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/noderrz/panel/issues"
-    },
-    "homepage": "https://github.com/noderrz/panel#readme",
-    "dependencies": {
-        "body-parser": "^1.19.1",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "express": "^4.17.2",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.1.8",
-        "passport": "^0.5.2",
-        "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^6.1.0"
-    }
+  "name": "panel",
+  "version": "0.1.1",
+  "description": "⚙️ Noderrz Control Panel - Open source",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/noderrz/panel.git"
+  },
+  "keywords": [
+    "panel",
+    "node",
+    "js"
+  ],
+  "author": "Noderrz",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/noderrz/panel/issues"
+  },
+  "homepage": "https://github.com/noderrz/panel#readme"
 }
