--- a/demo/package.json
+++ b/demo/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "demo",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.6",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.49.9"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.2"
-  }
+    "name": "demo",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite --port=5000",
+        "build": "tsc && vite build",
+        "build:react": "react-scripts build",
+        "preview": "vite preview",
+        "setup": "npx tailwindcss init -p",
+        "deploy": "npx netlify-cli deploy --prod"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.4.3",
+        "@themesberg/flowbite": "^1.3.0",
+        "daisyui": "^1.24.3",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.1",
+        "react-scripts": "^5.0.0",
+        "tailwindcss": "^3.0.15",
+        "yourid": "^0.1.3"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.33",
+        "@types/react-dom": "^17.0.10",
+        "@vitejs/plugin-react": "^1.0.7",
+        "typescript": "^4.4.4",
+        "vite": "^2.7.2"
+    }
 }
